cabal-version:      2.4
name:               mmzk-bsparser
version:            0.1.0.0
synopsis:           Parser combinators for mixed UTF-8 plain texts and binary streams
description:
    mmzk-bsparser is a Monadic parser combinator library aiming for paring plain texts (ASCII or encoded in UTF-8),
    binary stream, or a mixture of both.
    See https://github.com/sorrowfulT-Rex/mmzk-bsparser/blob/main/README.md (incomplete) for examples and full documentations.

category:    Parsing
bug-reports: https://github.com/sorrowfulT-Rex/mmzk-bsparser/issues
license:     BSD-3-Clause
author:      MMZK1526 <yc4120@ic.ac.uk>
maintainer:  MMZK1526 <yc4120@ic.ac.uk>
extra-source-files:
    CHANGELOG.md,
    README.md
    LICENSE


flag release
    description: Turn off development settings.
    default:     False
    manual:      True


library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
        MMZKBSParser,
        MMZKBSParser.ASCII,
        MMZKBSParser.Lexer,
        MMZKBSParser.Word8

    other-modules:
        MMZKBSParser.Convert,
        MMZKBSParser.Lexer.Regex
        MMZKBSParser.Parser

    other-extensions:
        TupleSections

    build-depends:
        base,
        bytestring ^>=0.11.3.1,
        utf8-string ^>=1.0.2,
        text ^>=2.0,
        transformers ^>=0.5.6.2

    if flag(release)
        ghc-options: -O3 -Wall
    else
        ghc-options: -O0 -Wall


test-suite wordlist
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Wordlist.hs
    build-depends:
        base,
        HUnit ^>=1.6.2.0,
        mmzk-bsparser


test-suite kuohu
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Kuohu.hs
    build-depends:
        base,
        HUnit ^>=1.6.2.0,
        mmzk-bsparser
